MediaSoupV2WebRtcClient: fix spinner race conditions, fix display for too small images

--- a/teamapps-client/less/components/UiMediaSoupV2WebRtcClient.less
+++ b/teamapps-client/less/components/UiMediaSoupV2WebRtcClient.less
@@ -42,6 +42,7 @@
 
     .image {
       display: inline-block;
+      object-fit: contain;
     }
 
     .video {
